# MLTrace

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_training_dataset_multi_dataset.py  0003_preprocessing_pipelines.py  0004_pipeline_name_unique.py  0005_pipeline_design_resolution.py  0006_pipeline_preview_folder.py  0007_dataset_folder_image_metadata.py  0008_model_configurations.py  0009_methods_refactor.py  0010_mean_image_fit_training.py  0011_training_pipelines.py  0012_training_runs.py  0013_training_run_device.py  (+27 more)
backend/app/: __init__.py  config.py  database.py  gpu_monitor.py  init_db.py  logging_setup.py  main.py  models.py  projects.py  scanner.py  schemas.py  services.py  video.py
backend/tests/: test_api.py  test_folder_index.py  test_gpu_monitor.py  test_heatmap_range.py  test_heatmap_storage.py  test_inference_engine.py  test_inspect_service.py  test_modeling.py  test_optimization.py  test_preprocessing.py  test_projects.py  test_registry.py  test_results_decimation.py  test_scanner.py  test_ssim_metrics.py  test_testing_service.py  test_training_data.py  test_training_gradient.py  test_training_scheduler.py  test_video.py
docs/: LEGACY_ALGORITHM.md  preprocessing_modules.md  project_doc.md  timeseries_analytics.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  resourceCache.ts  types.ts
tools/: generate_sample_datasets.py  setup_train_test_sample_data.py
(+114 files in other folders)
