[project]
name = "mltrace"
version = "0.1.0"
description = "Local MLTrace platform for image dataset cataloging, preprocessing, method configuration, training, testing, and analysis."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.14.0",
    "numpy>=2.1.0",
    "opencv-python-headless>=4.10.0",
    "pydantic-settings>=2.6.1",
    "pillow>=11.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.3",
]
postgres = [
    "psycopg[binary]>=3.2.3",
]
ml = [
    "torch==2.9.0",
    "torchvision==0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
